# birdtrip

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  FUTURE_PLANS.md  LICENSE  MODEL.md  README.md  docker-entrypoint.sh  download_50state_barcharts.sh  fly.toml  pyproject.toml
birdtrip/: __init__.py  api.py  ask.py  itinerary.py  lifelist.py  precompute.py  recommend.py  service.py  store.py  summary.py  taxonomy.py
data/: precomputed.csv
data/taxonomy/: eBird_taxonomy_v2025-4.csv
frontend/: index.html
scripts/: arrival_map.py  build_from_barcharts.py  diag_rank.py  diag_residual.py  download_barcharts.py  eb_cal_v2.py  eb_calibration_figs.py  eb_calibration_loo.py  eval_proxy.py  generate_sample.py  kappa_sweep.py  lambda_intuition.py  lambda_surprises.py  make_grid_proxy.py  make_viz.py  plot_calibration.py  precompute_duckdb.py  range_maps.py  range_maps_hex.py  swarm_lambda_compare.py  us_arrival.py  validate_holdout.py
skills/tufte_principles/: SKILL.md  demo__giss-temperature.html  demo__kyoto-sakura.html  demo__sunspot-butterfly.html  demo__sunspot-pretty.html
src/: verify.py
tests/: test_api.py  test_lifelist.py
viz/: holdout_US_reliability.csv  holdout_data_reliability.csv  kappa_sweep_served_reliability.csv
