[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "birdtrip"
version = "0.1.0"
description = "Plan birding trips from eBird data: where and when to maximize expected lifers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "duckdb>=0.10", "python-multipart>=0.0.9"]
dev = ["pytest>=7", "pyarrow>=14"]

[tool.setuptools]
packages = ["birdtrip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
